--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ img Circle.jpg{
 }
 
 button {
-  background-color: whitesmoke
+  background-color: whitesmoke;
   padding: 3px;
   margin: 5px;
 }
