--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
   margin: 30px;
-  background-color: #d2a679
+  background-color: #d2a679;
 }
 
-img Circle.jpg{
+img circle.jpg {
   width: 20%;
   height: 20%;
   float: right;
